1999-07-21  Paul D. Smith  <psmith@gnu.org>

	* Version 3.77.90 released.

	* Makefile.am (AUTOMAKE_OPTIONS): Require automake 1.4.

	* default.c (default_suffix_rules): Rearrange the default command
	lines to conform to POSIX rules (put the filename argument $<
	_after_ the OUTPUT_OPTION, not before it).

	* various: Changed !strncmp() calls to strneq() macros.

	* misc.c (sindex): Make slightly more efficient.

	* dir.c (file_impossible): Change savestring(X,strlen(X)) to xstrdup().
	* implicit.c (pattern_search): Ditto.
	* main.c (enter_command_line_file): Ditto.
	(main): Ditto.
	* misc.c (copy_dep_chain): Ditto.
	* read.c (read_makefile): Ditto.
	(parse_file_seq): Ditto.
	(tilde_expand): Ditto.
	(multi_glob): Ditto.
	* rule.c (install_pattern_rule): Ditto.
	* variable.c (define_variable_in_set): Ditto.
	(define_automatic_variables): Ditto.
	* vpath.c (construct_vpath_list): Ditto.

	* misc.c (xrealloc): Some reallocs are non-standard: work around
	them in xrealloc by calling malloc if PTR is NULL.
	* main.c (main): Call xrealloc() directly instead of testing for
	NULL.

	* function.c (func_sort): Don't try to free NULL; some older,
	non-standard versions of free() don't like it.

	* configure.in (--enable-dmalloc): Install some support for using
	dmalloc (http://www.dmalloc.com/) with make.  Use --enable-dmalloc
	with configure to enable it.

	* function.c (function_table_entry): Whoops!  The function.c
	rewrite breaks backward compatibility: all text to a function is
	broken into arguments, and extras are ignored.  So $(sort a,b,c)
	returns "a"!  Etc.  Ouch.  Fix it by making a positive value in
	the REQUIRED_ARGS field mean exactly that many arguments to the
	function; any "extras" are considered part of the last argument as
	before.  A negative value means at least that many, but may be
	more: in this case all text is broken on commas.
	(handle_function): Stop when we've seen REQUIRED_ARGS args, if >0.